# xyltl

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  NEXT_STEPS.md  PROJECT_CONTEXT.md  README.md  REPOSITORY_SETUP_AND_AGENT_WORKFLOW.md  TODO.md
Loongson_2K300_301_LIB/main/: CMakeLists.txt  build.sh  main.cpp  main.hpp  toolchain_path.cmake  更新日志.md
Loongson_2K300_301_LIB/main/scripts/: board_operations.sh
Loongson_2K300_301_LIB/user_app/: mq3_monitor.py  wifi_connect.sh
MD_Image/: lq_camera_ex.cpp
app_2k1000la/: CMakeLists.txt  README.md  cloud_client.py  requirements.txt  sensor_source.py  vision_service.py
app_2k1000la/scripts/: install_safecloud_client_user_service.sh
app_2k1000la/systemd/: xylt-safecloud-client.service.in
app_2k1000la/tests/: test_cloud_client.py  test_sensor_source.py  test_vision_service.py
docs/competition/: loongson_direction2_requirements.md
docs/deployment/: BOOT_AUTOSTART.md  FULL_SYSTEM_STARTUP_RUNBOOK.md
docs/integration/: 2k0301_current_runtime_notes.md  2k0301_firmware_handoff.md  2k1000la_safecloud_protocol.md
firmware_2k301/: CMakeLists.txt  README.md
hardware_refs/: README.md
modules/analyzer/: .env.example  README.md
modules/control/: __init__.py  mqtt_2k0301.py
protocol/: cloud_event.schema.json  judge_result.schema.json  risk_packet.schema.json  sensor_packet.schema.json
qt_hmi/: CMakeLists.txt  README.md  display_qt.pro
qt_hmi/resources/: README.md
qt_hmi/scripts/: build.sh  run_eglfs.sh  run_linuxfb.sh  run_x11.sh
qt_hmi/src/: FinalStatusDataProvider.cpp  FinalStatusDataProvider.h  IDataProvider.h  MainWindow.cpp  MainWindow.h  MockDataProvider.cpp  MockDataProvider.h  StatusModel.cpp  StatusModel.h  SystemStatus.h  main.cpp
safecloud/: .env.example  README.md  discovery_responder.py  requirements.txt
safecloud/app/: main.py
safecloud/docs/: api_contract.md  cloud_architecture.md  database_schema.md  development_plan.md  hardware_integration_guide.md  mqtt_topics.md
safecloud/simulator/: mock_device.py
safecloud/tests/: conftest.py  test_discovery_responder.py  test_evaluate_api.py  test_evaluate_scenarios.py  test_vision_api.py
safecloud/web/: app.js  index.html  styles.css
vision/: README.md
voice/: README.md  voice_text_player.py
voice_llm_demo/: README.md  assistant_state.py  config.py  main.py  requirements.txt  tts.py  vision_bridge.py
(+164 files in other folders)
